# cordis-horizon-projects-xml

./: .gitignore  README.md  main.py  project-rcn-237916_en.xml  project-rcn-237921_en.xml  project-rcn-237922_en.xml  project-rcn-237923_en.xml  project-rcn-237924_en.xml  project-rcn-237927_en.xml  project-rcn-237928_en.xml  project-rcn-237929_en.xml  project-rcn-237931_en.xml  project-rcn-237932_en.xml  project-rcn-237934_en.xml  project-rcn-237935_en.xml  project-rcn-237937_en.xml  project-rcn-237939_en.xml  project-rcn-237940_en.xml  project-rcn-237942_en.xml  project-rcn-237943_en.xml  project-rcn-237944_en.xml  project-rcn-237954_en.xml  project-rcn-237957_en.xml  project-rcn-237993_en.xml  project-rcn-237998_en.xml  project-rcn-237999_en.xml  project-rcn-238002_en.xml  project-rcn-238003_en.xml  project-rcn-238007_en.xml  project-rcn-238008_en.xml  project-rcn-238018_en.xml  project-rcn-238020_en.xml  project-rcn-238021_en.xml  project-rcn-238033_en.xml  project-rcn-238036_en.xml  project-rcn-238038_en.xml  project-rcn-238039_en.xml  project-rcn-238041_en.xml  project-rcn-238042_en.xml  project-rcn-238043_en.xml  (+10235 more)
data/: project-rcn-237915_en.xml  project-rcn-237916_en.xml  project-rcn-237917_en.xml  project-rcn-237918_en.xml  project-rcn-237919_en.xml  project-rcn-237920_en.xml  project-rcn-237921_en.xml  project-rcn-237922_en.xml  project-rcn-237923_en.xml  project-rcn-237924_en.xml  project-rcn-237925_en.xml  project-rcn-237927_en.xml  project-rcn-237928_en.xml  project-rcn-237929_en.xml  (+18526 more)
models/rust/: Cargo.toml
models/rust/src/: helpers.rs  main.rs  model.rs
(+19196 files in other folders)
